Update: add icon to webpage

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jefferson Caicedo - Software Developer</title>
+    <link rel="icon" type="image/jpg" href="icon.jpg">
+    <link rel="apple-touch-icon" href="icon.jpg">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" rel="stylesheet" />
     <link href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css" rel="stylesheet">
@@ -603,7 +605,7 @@
                                 &#9679; Incremento de la interacción y participación de los clientes<br>
                                 &#9679; Mejora del posicionamiento y SEO para marca
                             </p>
-                            <a href="https://nextsoft.com" class="btn-ver-mas">Ver más →</a>
+                            <a href="https://nextsof.com" class="btn-ver-mas">Ver más →</a>
                         </div>
                     </div>
                 </div>
